@@ -134,7 +134,7 @@
   <target name="config-platform-silverlight40">
     <property name="nant.settings.currentframework" value="silverlight-4.0"/>
     <property name="build.platform" value="silverlight-4.0"/>
-    <property name="build.defines" value="${global.build.defines},SILVERLIGHT,SILVERLIGHT_30,SILVERLIGHT_40,NO_WEB,NO_REMOTING,NO_CONVERT,NO_PARTIAL_TRUST,NO_EXCEPTION_SERIALIZATION,NO_SKIP_VISIBILITY,NO_DEBUG_SYMBOLS"/>
+    <property name="build.defines" value="${global.build.defines},SILVERLIGHT,SILVERLIGHT_40,NO_WEB,NO_REMOTING,NO_CONVERT,NO_PARTIAL_TRUST,NO_EXCEPTION_SERIALIZATION,NO_SKIP_VISIBILITY,NO_DEBUG_SYMBOLS"/>
     <property name="current.path.bin" value="${path.bin}/Silverlight-4.0/${build.config}"/>
     <property name="current.path.test" value="${path.bin}/Silverlight-4.0/tests" />
     <property name="current.path.lib" value="${path.lib}/Silverlight-4.0" />
