@@ -1,6 +1,5 @@
 ﻿namespace Caliburn.PresentationFramework.Configuration
 {
-    using System;
     using System.ComponentModel;
     using System.Linq;
     using System.Reflection;
