@@ -35,6 +35,7 @@ V2 Alpha
 -Created a Validate behavior which applies IDataErrorInfo in WPF and SL4 and uses an exception-based mechanism in SL3.
 -Enabled binding conventions to detect validation scenarios and configure the binding appropriately.
 -Added Caliburn.ShellFramework with History, Results, MessagBox, Questions, Menu, Resources, etc.
+-Added IInputManager and DefaultInputManager for managing control focus and shortcut keys.
 
 V1.1 Release
 -Fixed an issue in the WPF version of InteractionNode.
